--- a/MySQL/MySQL/MySQL/Views/MainPage.xaml
+++ b/MySQL/MySQL/MySQL/Views/MainPage.xaml
@@ -2,10 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MySQL.Views.MainPage"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             BackgroundColor="HotPink">
 
     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-        <Label Text="Welcome to Xamarin Forms and Prism!" />
+        <Label Text="Welcome to Xamarin Forms and Prism!" 
+               FontSize="30"
+               TextColor="White"/>
+        <Button Text="開始"
+                Command="{Binding StartCommand}"/>
     </StackLayout>
 
 </ContentPage>
