--- a/MySQL/MySQL/MySQL/Views/UserPlantUnitPage.xaml
+++ b/MySQL/MySQL/MySQL/Views/UserPlantUnitPage.xaml
@@ -13,6 +13,8 @@
                 Orientation="Vertical">
                 <BindableLayout.ItemTemplate>
                     <DataTemplate>
+                        <StackLayout
+                            Orientation="Vertical">
                         <Grid
                             HeightRequest="50">
                             <BoxView Color="Gray"/>
@@ -20,6 +22,23 @@
                                HorizontalOptions="Start" VerticalOptions="Center"
                                FontSize="24" TextColor="White"/>                            
                         </Grid>
+                            <StackLayout Orientation="Vertical"
+                                         BindableLayout.ItemsSource="{Binding PLANT_UNITS}">
+                                <BindableLayout.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackLayout
+                                            Orientation="Horizontal">
+                                            <Label Text="{Binding PLANT_UNIT}"
+                                                   FontSize="16"/>
+                                            <Label Text="-"/>
+                                            <Label Text="{Binding CHINESE_UNIT_NAME}"
+                                                   FontSize="16"/>
+                                        </StackLayout>
+                                    </DataTemplate>
+                                </BindableLayout.ItemTemplate>
+                                
+                            </StackLayout>
+                        </StackLayout>
                     </DataTemplate>
                 </BindableLayout.ItemTemplate>
             </StackLayout>
