--- a/MySQL/MySQL/MySQL/Views/PlantUnitSamplePage.xaml
+++ b/MySQL/MySQL/MySQL/Views/PlantUnitSamplePage.xaml
@@ -3,6 +3,50 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="MySQL.Views.PlantUnitSamplePage">
-  
+             x:Class="MySQL.Views.PlantUnitSamplePage"
+             Title="{Binding PageName}"
+             x:Name="ThisPage">
+
+
+    <Grid>
+        <ScrollView Orientation="Vertical">
+            <StackLayout
+                Orientation="Vertical"
+                BindableLayout.ItemsSource="{Binding PlantUnitSample.data}">
+                <BindableLayout.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="10">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="70"/>
+                                <ColumnDefinition Width="70"/>                                
+                            </Grid.ColumnDefinitions>
+
+                            <Label Text="{Binding SAMPLING_POINT}"
+                                   FontSize="16"/>
+                            <Label Text="{Binding SAMPLE_NAME}"
+                                   Grid.Row="1" Grid.Column="0"
+                                   FontSize="16"/>
+                            <Label Text="{Binding SAMPLED_DATE}"
+                                   Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"
+                                   FontSize="16"/>
+                            <Label
+                                Grid.Row="1" Grid.Column="1"
+                                Text="例行"
+                                FontSize="16" TextColor="Orange"/>
+                            <Label
+                                Grid.Row="1" Grid.Column="2"
+                                Text="分析"
+                                FontSize="16" TextColor="Pink"/>
+                        </Grid>
+                    </DataTemplate>
+                </BindableLayout.ItemTemplate>
+                
+            </StackLayout>
+        </ScrollView>
+    </Grid>
 </ContentPage>
